# ros_study

./: CMakeLists.txt  package.xml
config/: my_study_ros.yaml
gazebo/: package.xml
gazebo/models/simple_box/: README.md  model.config
gazebo/models/wheel_robot_simple/: README.md  model.sdf
gazebo/worlds/: README.md  box.world
launch/: my_study_ros.launch
models/simple_box/: model.sdf
models/wheel_robot_simple/: model.config
others/: compile_commands.json  package.xml
others/.clangd/index/: code1.cpp.EC728012E872302E.idx
others/src/: code1.cpp
src/tools/: set_vel_node.cpp
worlds/: wheel_robot_simple.world  world_first_launch.world
